--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,41 @@ name = "address-propensity"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "loader"
+path = "src/loader/main.rs"
+
+[[bin]]
+name = "server"
+path = "src/server/main.rs"
 
 [dependencies]
+actix-http = "=3.0.0-beta.10"
+actix-web = "=4.0.0-beta.9"
 anyhow = "*"
-clap = { version = "3.0.0-beta.4", features = ["yaml"] }
-config = "*"
+bigdecimal = { version = "0.2.2", features = ["serde"] }
+clap = { version = "3.0.0-beta.4" }
+chrono = "*"
+config = { git = "https://github.com/dmrolfs/config-rs" }
+csv = "*"
+enum-display-derive = "*"
+lazy_static = "*"
+regex = "*"
+serde = { version = "*", features = ["derive"] }
+serde_json = "*"
+serde_with = { version = "*", features = ["chrono", "json", "macros"] }
+sqlx = { version = "*", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "bigdecimal", "uuid", "chrono", "migrate", "offline"] }
 thiserror = "*"
+tokio = { version = "*", features = ["full"]}
+tracing = "*"
+tracing-actix-web = "0.4.0-beta.12"
+tracing-bunyan-formatter = "*"
+tracing-futures = "*"
+tracing-log = "*"
+tracing-subscriber = "*"
+validator = { version = "*", features = ["derive"] }
 
+[dev-dependencies]
+pretty_assertions = "*"
+claim  = "*"
+fake = { version = "*", features = ["chrono"] }
