--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "address-propensity"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2018"
 
 [[bin]]
@@ -19,13 +19,13 @@ bigdecimal = { version = "0.2.2", features = ["serde"] }
 clap = { version = "3.0.0-beta.4" }
 chrono = "0.4"
 config = { git = "https://github.com/dmrolfs/config-rs" }
-console = "0.14"
 csv = "1.1"
 enum-display-derive = "0.1"
-indicatif="0.16"
 itertools = "0.10"
 lazy_static = "1.4"
 plotters="0.3"
+plotters-bitmap = "0.3"
+progressing = "3"
 regex = "1.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -40,6 +40,8 @@ tracing-futures = "0.2"
 tracing-log = "0.1"
 tracing-subscriber = "0.2"
 validator = { version = "0.14", features = ["derive"] }
+#console = "0.14"
+#indicatif="0.16"
 
 [dev-dependencies]
 pretty_assertions = "*"
