first attributes added

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ csv = "1.1"
 enum-display-derive = "0.1"
 itertools = "0.10"
 lazy_static = "1.4"
+metered = "0.8"
 plotters="0.3"
 plotters-bitmap = "0.3"
 progressing = "3"
