--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,13 +19,14 @@ bigdecimal = { version = "0.2.2", features = ["serde"] }
 clap = { version = "3.0.0-beta.4" }
 chrono = "0.4"
 config = { git = "https://github.com/dmrolfs/config-rs" }
+console = "0.14"
 csv = "1.1"
 enum-display-derive = "0.1"
+indicatif = "0.16"
 itertools = "0.10"
 lazy_static = "1.4"
 plotters="0.3"
 plotters-bitmap = "0.3"
-progressing = "3"
 regex = "1.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
